working version of api
